feat: make CORS/WS origins and API base configurable for deploy